# LibDotNet

./: .anjuta_sym_db.db  LibDotNet.geany  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  base.am  config.h  config.h.in  config.status  configure  configure.ac  libtool
src/: Makefile  Makefile.am  Makefile.in  System.Collections.Generic.c  System.Collections.Generic.lo  System.Collections.Generic.vala  libdotnet-0.1.deps  libdotnet-0.1.pc  libdotnet-0.1.pc.in  libdotnet-0.1.vapi  libdotnet.c  libdotnet.h  libdotnet.la  libdotnet.lo  sourcefiles.am  valaizer.py
src/.deps/: System.Collections.Generic.Plo  libdotnet.Plo
src/.libs/: libdotnet.la  libdotnet.lai  libdotnet.so.0  libdotnet.so.0.0.0
src/System/: Array.vala  ArrayTypeMismatchException.vala  Char.vala  Exceptions.c  Exceptions.vala  Nullable.c  Nullable.vala  Object.c  Object.vala  String.c  String.vala  StringComparer.vala  action.c  action.vala  default.c  default.vala  icloneable.c  icloneable.vala  icomparable.c  icomparable.vala  icustomformatter.c  icustomformatter.vala  idisposable.c  idisposable.vala  iequatable.c  iequatable.vala  iformatprovider.c  iformatprovider.vala  iformattable.c  iformattable.vala
src/System/Collections/: ArrayList.c  ArrayList.vala  BitArray.c  BitArray.vala  CaseInsensitiveComparer.c  CaseInsensitiveComparer.vala  CaseInsensitiveHashCodeProvider.c  CaseInsensitiveHashCodeProvider.vala  CollectionBase.c  CollectionBase.vala  Comparer.c  Comparer.vala  DictionaryBase.c  DictionaryBase.vala  DictionaryEntry.c  DictionaryEntry.vala  Hashtable.c  Hashtable.vala  KeyValuePairs.c  KeyValuePairs.vala  Queue.c  Queue.vala  ReadOnlyCollectionBase.c  ReadOnlyCollectionBase.vala  SortedList.c  SortedList.vala  Stack.c  Stack.vala  StructuralComparisons.c  StructuralComparisons.vala  icollection.c  icollection.vala  icomparer.c  icomparer.vala  idictionary.c  idictionary.vala  idictionaryenumerator.c  idictionaryenumerator.vala  ienumerable.c  ienumerable.vala  (+12 more)
src/System/Collections/Generic/: BitHelper.vala  Comparer.c  Comparer.vala  Dictionary.c  Dictionary.vala  DictionaryEntry.c  DictionaryEntry.vala  EqualityComparer.c  EqualityComparer.vala  HashSet.vala  ICollectionDebugView.vala  IDictionaryDebugView.vala  KeyValuePair.c  KeyValuePair.vala  LinkedList.vala  List.c  List.vala  Queue.c  Queue.vala  QueueDebugView.vala  SortedDictionary.vala  SortedList.c  SortedList.vala  SortedSet.vala  Stack.c  Stack.vala  StackDebugView.vala  icollection.c  icollection.vala  icomparer.c  icomparer.vala  idictionary.c  idictionary.vala  idictionaryenumerator.c  idictionaryenumerator.vala  ienumerable.c  ienumerable.vala  ienumerator.c  ienumerator.vala  iequalitycomparer.c  (+13 more)
src/System/Collections/ObjectModel/: ReadOnlyCollection.c  ReadOnlyCollection.vala
src/System/Collections/Specialized/: CollectionsUtil.vala
src/System/Diagnostics/: Diagnostics.c  Diagnostics.vala
src/System/Globalization/: CultureInfo.c  CultureInfo.vala  Globalization.c  Globalization.vala
src/System/IO/: InvalidDataException.c  InvalidDataException.vala  TextReader.vala
src/System/Linq/: Enumerable.c  Enumerable.vala  Errors.c  Errors.vala
src/System/Reflection/: Reflection.c  Reflection.vala
src/System/Runtime/: Runtime.c  Runtime.vala
src/System/Runtime/Serialization/: SerializationInfo.vala  StreamingContext.vala  ideserializationcallback.c  ideserializationcallback.lo  ideserializationcallback.vala  iserializable.c  iserializable.lo  iserializable.vala
src/System/Security/: Security.c  Security.vala
src/System/Text/: StringBuilder.c  StringBuilder.vala  Text.c  Text.vala
src/System/Text/RegularExpressions/: Regex.c  Regex.lo  Regex.vala  RegexBoyerMoore.vala  RegexCapture.c  RegexCapture.lo  RegexCapture.vala  RegexCaptureCollection.c  RegexCaptureCollection.lo  RegexCaptureCollection.vala  RegexCharClass.vala  RegexCode.vala  RegexFCD.vala  RegexGroup.c  RegexGroup.lo  RegexGroup.vala  RegexGroupCollection.c  RegexGroupCollection.lo  RegexGroupCollection.vala  RegexInterpreter.vala  RegexMatch.c  RegexMatch.lo  RegexMatch.vala  RegexMatchCollection.c  RegexMatchCollection.lo  RegexMatchCollection.vala  RegexMatchTimeoutException.c  RegexMatchTimeoutException.lo  RegexMatchTimeoutException.vala  RegexNode.vala  RegexOptions.c  RegexOptions.lo  RegexOptions.vala  RegexParser.vala  RegexReplacement.vala  (+3 more)
src/System/Threading/: Threading.c  Threading.vala
src/tests/: Makefile.am  testcase.vala  testmain.vala
src/tests/System.Collections/: testsystemcollectionsarraylist.vala
tests/: Makefile.am  testcase.vala  testmain.vala  testsources.am
tests/System.Collections/: testarraylist.vala
tests/System.Collections.Generic/: testcomparer.vala  testdictionary.vala  testlist.vala  testqueue.vala  testsortedlist.c  testsortedlist.vala  teststack.vala
tests/System.Text/: teststringbuilder.vala
(+30 files in other folders)
